--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -13,10 +13,10 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         body {
-            background: #e0f2f1; /* Fallback for older browsers */
+            background: #e0f2f1;
             background: -webkit-linear-gradient(to right, #2C90C4, #31CCB0);
             background: linear-gradient(to right, #2C90C4, #31CCB0);
-            background-attachment: fixed; /* Ensures the gradient covers the whole page without repeating */
+            background-attachment: fixed;
         }
     </style>
 </head>
