--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -10,17 +10,11 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SafePoint - Schedule a Session</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-        body {
-            background: #e0f2f1;
-            background: -webkit-linear-gradient(to right, #2C90C4, #31CCB0);
-            background: linear-gradient(to right, #2C90C4, #31CCB0);
-            background-attachment: fixed;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
 
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
         <div class="card shadow p-4" style="max-width: 600px; width: 100%;">
@@ -74,6 +68,8 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
             </div>
         </div>
     </div>
+
+    <script src="/js/main.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
