--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,4 +1,4 @@
-<div th:fragment="navbar">
+<div th:fragment="nav">
     <div class="fab-container">
         <button class="fab" id="fabToggle">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
@@ -7,9 +7,9 @@
         </button>
 
         <ul class="nav-links">
-            <li><a href="/">Submit Report</a></li>
-            <li><a href="/schedule">Schedule Session</a></li>
-            <li><a href="/track">Track Report</a></li>
+            <li><a href="/">Report</a></li>
+            <li><a href="/schedule">Schedule</a></li>
+            <li><a href="/track">Track</a></li>
         </ul>
     </div>
 </div>
