--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div th:replace="~{fragments/navbar :: navbar}"></div>
+    <div th:replace="~{fragments/nav :: nav}"></div>
 
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
         <div class="card shadow p-4" style="max-width: 600px; width: 100%;">
@@ -94,7 +94,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     </div>
     
     <script src="/js/main.js"></script>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script th:if="${message}">
