Remove contact number references.

--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -47,8 +47,8 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                     </div>
 
                     <div class="form-floating mb-3">
-                        <input type="tel" class="form-control" id="contactNumber" th:field="*{contactNumber}" placeholder="Contact Number">
-                        <label for="contactNumber">Contact Number</label>
+                        <input type="email" class="form-control" id="email" th:field="*{email}" placeholder="Email Address">
+                        <label for="email">Email Address</label>
                     </div>
 
                     <div class="form-floating mb-3">
