--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,13 +30,8 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                     </div>
 
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="name" th:field="*{email}" placeholder="Email Address" required>
+                        <input type="email" class="form-control" id="email" th:field="*{email}" placeholder="Email Address" required>
                         <label for="email">Email Address</label>
-                    </div>
-
-                    <div class="form-floating mb-4">
-                        <input type="tel" class="form-control" id="contactNumber" th:field="*{contactNumber}" placeholder="Contact Number">
-                        <label for="contactNumber">Contact Number</label>
                     </div>
                     
                     <div class="form-floating mb-3">
