--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,4 +1,5 @@
 <div th:fragment="nav">
+    <div class="backdrop" id="backdrop"></div>
     <div class="fab-container">
         <button class="fab" id="fabToggle">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
