--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -2,15 +2,28 @@
     <div class="backdrop" id="backdrop"></div>
     <div class="fab-container">
         <button class="fab" id="fabToggle">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-            </svg>
+            <i class="bi bi-list fab-list-icon"></i>
         </button>
 
         <ul class="nav-links">
-            <li><a href="/">Report</a></li>
-            <li><a href="/schedule">Schedule</a></li>
-            <li><a href="/track">Track</a></li>
+            <li>
+                <a href="/">
+                    <i class="bi bi-chat-right-dots-fill"></i>
+                    <span>Report</span>
+                </a>
+            </li>
+            <li>
+                <a href="/schedule">
+                    <i class="bi bi-calendar2-plus-fill"></i>
+                    <span>Schedule</span>
+                </a>
+            </li>
+            <li>
+                <a href="/track">
+                    <i class="bi bi-clipboard2-data-fill"></i>
+                    <span>Track</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
