--- a/src/main/resources/templates/admin-login.html
+++ b/src/main/resources/templates/admin-login.html
@@ -6,19 +6,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
-    <style>
-        .login-card {
-            max-width: 450px;
-            width: 100%;
-        }
-    </style>
-</head>
+<head th:replace="~{fragments/admin-common :: head('Admin Login')}"></head>
 <body class="admin-body d-flex justify-content-center align-items-center min-vh-100 p-3">
     <div class="card p-4 login-card">
         <div class="card-body">
@@ -40,6 +28,6 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
             </form>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <div th:replace="~{fragments/admin-common :: scripts}"></div>
 </body>
 </html>
