--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -6,14 +6,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SafePoint - Track Report</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
+<head th:replace="~{fragments/common :: head('SafePoint - Track Report')}"></head>
 <body>
     <div th:replace="~{fragments/nav :: nav}"></div>
     <div class="main-content">
@@ -52,9 +45,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
         </div>
     </div>
 
-    <script src="/js/main.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <div th:replace="~{fragments/common :: scripts}"></div>
 
 </body>
 </html>
