Secure admin key since it was previously exposed in the URL and the history.

--- a/src/main/resources/templates/admin-login.html
+++ b/src/main/resources/templates/admin-login.html
@@ -17,7 +17,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                 <span th:text="${error}"></span>
             </div>
 
-            <form th:action="@{/admin-dashboard}" method="post">
+            <form th:action="@{/admin-login}" method="post">
                 <div class="form-floating mb-3">
                     <input type="password" class="form-control" id="key" name="key" placeholder="Secret Key" required>
                     <label for="key">Secret Key</label>
